modified:   about_us.html 	modified:   contact.html 	modified:   css/global.css 	modified:   index.html

--- a/css/global.css
+++ b/css/global.css
@@ -2,7 +2,7 @@
 
 :root {
   --primary-color: #3533cd;
-  --primary-darker-shade: #1156b0;
+  --primary-darker-shade: #504f77;
   --light-text-color: #8ca2c0;
   --surface-color: #eff2f6;
   --border-color: #d7dadd;
